--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "",
+  "homepage": {
+    "netlify": "",
+    "github": "https://benjyros.github.io/benjamin-peterhans"
+  },
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
